--- a/public/js/views/home.html
+++ b/public/js/views/home.html
@@ -6,37 +6,34 @@
           <h3>Login</h3>
           <form ng-submit="home.login()">
             <div class="form-group">
-              <input class="form-control" type="email" name="email" ng-model="home.user.email" placeholder="Email">
+              <input class="form-control" type="email" name="email" ng-model="home.userLogin.email" placeholder="Email">
             </div>
             <div class="form-group">
-              <input class="form-control" type="password" name="password" ng-model="home.user.password" placeholder="Password">
+              <input class="form-control" type="password" name="password" ng-model="home.userLogin.password" placeholder="Password">
             </div>
             <input class="btn btn-primary" type="submit" value="Submit">
           </form>
         </li>
         <li class="registerForm">
           <h3>Register</h3>
-          <form ng-submit="register.register()">
+          <form ng-submit="home.register()">
             <div class="form-group">
-              <input class="form-control" type="text" name="username" ng-model="register.user.username" placeholder="Username">
+              <input class="form-control" type="text" name="username" ng-model="home.userRegister.username" placeholder="Username">
             </div>
             <div class="form-group">
-              <input class="form-control" type="text" name="firstName" ng-model="register.user.firstName" placeholder="First name">
+              <input class="form-control" type="text" name="firstName" ng-model="home.userRegister.firstName" placeholder="First name">
             </div>
             <div class="form-group">
-              <input class="form-control" type="text" name="lastName" ng-model="register.user.lastName" placeholder="Last name">
+              <input class="form-control" type="text" name="lastName" ng-model="home.userRegister.lastName" placeholder="Last name">
             </div>
             <div class="form-group">
-              <input class="form-control" type="text" name="image" ng-model="register.user.image" placeholder="Image">
+              <input class="form-control" type="email" name="email" ng-model="home.userRegister.email" placeholder="Email">
             </div>
             <div class="form-group">
-              <input class="form-control" type="email" name="email" ng-model="register.user.email" placeholder="Email">
+              <input class="form-control" type="password" name="password" ng-model="home.userRegister.password" placeholder="Password">
             </div>
             <div class="form-group">
-              <input class="form-control" type="password" name="password" ng-model="register.user.password" placeholder="Password">
-            </div>
-            <div class="form-group">
-              <input class="form-control" type="password" name="passwordConfirmation" ng-model="register.user.passwordConfirmation" placeholder="Password confirmation">
+              <input class="form-control" type="password" name="passwordConfirmation" ng-model="home.userRegister.passwordConfirmation" placeholder="Password confirmation">
             </div>
             <input class="btn btn-primary" type="submit" value="Submit" />
           </form>
