starting on tests

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -18,7 +18,7 @@ a.navbar-brand {
   }
 }
 
-div.login-register {
+div.home-page {
   background-image: url("../images/Hero1.png");
   -webkit-background-size: cover;
   -moz-background-size: cover;
