working on loginForm

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -29,5 +29,19 @@ div.home-page {
 }
 
 div.formsBox {
+  color: #f5f5f5;
+}
 
+li.loginForm {
+  list-style: none;
+  h3 {
+    clear: both;
+  }
+}
+
+li.registerForm {
+  list-style: none;
+  h3 {
+    clear: both;
+  }
 }
