--- a/src/js/views/home.html
+++ b/src/js/views/home.html
@@ -1,10 +1,10 @@
 <div class="home-page">
   <div class="login-register">
-    <div class="formsBox">
+    <div class="formsBox row">
       <ul>
         <li class="loginForm">
           <h3>Login</h3>
-          <form ng-submit="home.login()">
+          <form ng-submit="home.login()" class="col-md-5 push-md-7">
             <div class="form-group">
               <input class="form-control" type="email" name="email" ng-model="home.userLogin.email" placeholder="Email">
             </div>
@@ -16,7 +16,7 @@
         </li>
         <li class="registerForm">
           <h3>Register</h3>
-          <form ng-submit="home.register()">
+          <form ng-submit="home.register()" class="col-md-5 push-md-7">
             <div class="form-group">
               <input class="form-control" type="text" name="username" ng-model="home.userRegister.username" placeholder="Username">
             </div>
