--- a/src/js/views/home.html
+++ b/src/js/views/home.html
@@ -2,22 +2,21 @@
   <div class="login-register">
     <div class="formsBox row">
       <ul class="ulForm">
-        <li class="loginForm">
+        <li class="form-li">
           <form ng-submit="home.login()" id="formOne" class="col-md-6 push-md-6 pull-right">
             <div class="form-group">
-              <h3>Login</h3>
               <input class="form-control" type="email" name="email" ng-model="home.userLogin.email" placeholder="Email">
             </div>
             <div class="form-group">
               <input class="form-control" type="password" name="password" ng-model="home.userLogin.password" placeholder="Password">
             </div>
-            <input class="btn btn-primary" type="submit" value="Submit">
+            <input class="btn btn-primary" type="submit" value="Login">
           </form>
         </li>
-        <li class="registerForm">
+
+        <li class="form-li">
           <form ng-submit="home.register()" id="formTwo" class="col-md-6 push-md-6 pull-right">
             <div class="form-group">
-              <h3>Register</h3>
               <input class="form-control" type="text" name="username" ng-model="home.userRegister.username" placeholder="Username">
             </div>
             <div class="form-group">
@@ -35,7 +34,7 @@
             <div class="form-group">
               <input class="form-control" type="password" name="passwordConfirmation" ng-model="home.userRegister.passwordConfirmation" placeholder="Password confirmation">
             </div>
-            <input class="btn btn-primary" type="submit" value="Submit" />
+            <input class="btn btn-primary" type="submit" value="Register" />
           </form>
         </li>
       </ul>
