--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -8,49 +8,79 @@ body {
 
 header {
   background: #333;
-}
-
-a.navbar-brand {
-  font-size: 36px;
-  color: black;
-  strong {
-    font-weight: 900;
+  a.navbar-brand {
+    background: white;
+    font-size: 36px;
+    color: black;
+    height: 80px;
+    line-height: 80px;
+    padding: 0;
+    img {
+      height: 100%;
+      vertical-align: middle;
+    }
   }
 }
 
 div.home-page {
   background-image: url("../images/Hero1.png");
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
   background-size: cover;
+  max-height: 600px;
   padding-bottom: 300px;
-  padding-top: 150px;
+  padding-top: 35px;
   text-align: center;
+  .login-register{
+    .formsBox {
+      color: #333;
+      ul {
+        .form-li {
+          list-style: none;
+          padding-right: 40px;
+          clear: both;
+          form {
+            background-color: rgba(245, 245, 245, .9);
+            padding: 18px;
+            &#formOne{
+              border-radius: 15px 15px 0 0;
+            }
+            &#formTwo{
+              border-radius: 0 0 15px 15px;
+            }
+          }
+        }
+      }
+    }
+  }
 }
 
-div.formsBox {
-  color: #333;
-
-}
-
-li.loginForm {
-  list-style: none;
-  padding-right: 40px;
-    clear: both;
-
-}
-
-li.registerForm {
-  list-style: none;
-  padding-right: 40px;
-
-    clear: both;
-
-
-}
-
-#formOne, #formTwo {
-  background-color: rgba(245, 245, 245, .7);
-    padding: 18px;
-    border-radius: 15px;
+@media only screen
+and (min-device-width : 375px)
+and (max-device-width : 667px) {
+  div.home-page {
+    padding-top: 0;
+    background: none;
+    form {
+      padding-top: 5px;
+      width: 100%;
+      margin-right: 20px;
+    }
+  }
+  header {
+    a.navbar-brand {
+      height: 50px;
+      line-height: 50px;
+      padding: 0;
+    }
+  }
+  .navbar-toggle {
+      position: relative;
+      float: right;
+      padding: 9px 10px;
+      margin-top: 8px;
+      margin-right: 55px;
+      margin-bottom: 8px;
+      background-color: transparent;
+      border: 1px solid transparent;
+      border-radius: 4px;
+  }
 }
