--- a/src/js/views/clothesItems/new.html
+++ b/src/js/views/clothesItems/new.html
@@ -1,1 +1,26 @@
 <h2>ADD AN ITEM</h2>
+<form class="add-item" ng-submit="clothesItems.submit()">
+  <div class="form-group">
+    <label>Title</label>
+    <input ng-model="clothesItems.item.title" class="form-control">
+  </div>
+  <div class="form-group">
+    <label>Description</label>
+    <textarea ng-model="clothesItems.item.description" class="form-control"></textarea>
+  </div>
+  <div class="form-group">
+    <label>Category</label>
+    <input ng-model="clothesItems.item.category" class="form-control">
+  </div>
+  <div class="form-group">
+    <label>Sex</label>
+    <input ng-model="clothesItems.item.sex" class="form-control">
+  </div>
+  <div class="form-group">
+    <label>Image</label>
+    <input ng-model="clothesItems.item.image" class="form-control">
+  </div>
+  <input type="submit" value="Add" class="btn btn-primary">
+  <a href="javascript:history.back()"><input type="button" value="Cancel" class="btn btn-default"></a>
+  {{clothesItems.item}}
+</form>
