--- a/src/js/views/clothesItems/new.html
+++ b/src/js/views/clothesItems/new.html
@@ -10,11 +10,20 @@
   </div>
   <div class="form-group">
     <label>Category</label>
-    <input ng-model="clothesItems.item.category" class="form-control">
+    <select name="categories" ng-model="clothesItems.item.category">
+      <option value="jeans">Jeans</option>
+      <option value="jumpers">Jumpers</option>
+      <option value="skirts">Skirts</option>
+      <option value="shirts">Shirts</option>
+    </select>
   </div>
   <div class="form-group">
     <label>Sex</label>
-    <input ng-model="clothesItems.item.sex" class="form-control">
+    <select name="sex" ng-model="clothesItems.item.sex">
+      <option value="female">Female</option>
+      <option value="male">Male</option>
+      <option value="unisex">Unisex</option>
+    </select>
   </div>
   <div class="form-group">
     <label>Image</label>
