--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -89,3 +89,18 @@ and (max-device-width : 667px) {
     width: 300px;
   }
 }
+
+ul.clothes-index {
+  list-style-type: none;
+  padding: 0;
+  margin: 0 auto;
+  text-align: center;
+  li {
+    display: inline-block;
+    margin: 2px;
+    img {
+      height: 300px;
+      width: auto;
+    }
+  }
+}
