--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -8,18 +8,21 @@ body {
 
 header {
   background: #333;
-  a.navbar-brand {
-    background: white;
-    font-size: 36px;
-    color: black;
-    height: 80px;
-    line-height: 80px;
-    padding: 0;
-    img {
-      height: 100%;
-      vertical-align: middle;
+    a.navbar-brand {
+      background: white;
+      font-size: 36px;
+      color: black;
+      height: 80px;
+      line-height: 80px;
+      padding: 0;
+      img {
+        height: 100%;
+        vertical-align: middle;
+      }
     }
-  }
+  .navbar-nav li a {
+ line-height: 50px;
+}
 }
 
 
@@ -57,6 +60,10 @@ div.home-page {
 @media only screen
 and (min-device-width : 375px)
 and (max-device-width : 667px) {
+  h2 {
+    text-align: center;
+    margin: 0;
+  }
   div.home-page {
     padding-top: 0;
     background: none;
@@ -75,18 +82,29 @@ and (max-device-width : 667px) {
     }
   }
   .navbar-toggle {
-      position: relative;
-      float: right;
-      padding: 9px 10px;
-      margin-top: 8px;
-      margin-right: 55px;
-      margin-bottom: 8px;
-      background-color: transparent;
-      border: 1px solid transparent;
-      border-radius: 4px;
+    position: relative;
+    float: right;
+    padding: 9px 10px;
+    margin-top: 8px;
+    margin-right: 15px;
+    margin-bottom: 8px;
+    background-color: transparent;
+    border: 1px solid transparent;
+    border-radius: 4px;
   }
   form.add-item{
     width: 300px;
+  }
+  ul.clothes-index {
+    li.ng-scope {
+      display: block;
+      text-align: center;
+      img {
+        width: 100%;
+        height: auto;
+        text-align: center;
+      }
+    }
   }
 }
 
@@ -94,12 +112,21 @@ ul.clothes-index {
   list-style-type: none;
   padding: 0;
   margin: 0 auto;
-  text-align: center;
+  text-align: left;
+  h2 {
+    margin: 0px;
+  }
   li {
     display: inline-block;
-    margin: 2px;
+    margin: 15px;
+    h4 {
+      font-size: 14px;
+      text-transform: uppercase;
+      text-align: center;
+      font-weight: bold;
+    }
     img {
-      height: 300px;
+      height: 240px;
       width: auto;
     }
   }
