--- a/src/js/views/clothesItems/new.html
+++ b/src/js/views/clothesItems/new.html
@@ -18,7 +18,7 @@
     </select>
   </div>
   <div class="form-group">
-    <label>Sex</label>
+    <label>Gender</label>
     <select name="sex" ng-model="clothesItems.item.sex">
       <option value="female">Female</option>
       <option value="male">Male</option>
@@ -31,5 +31,4 @@
   </div>
   <input type="submit" value="Add" class="btn btn-primary">
   <a href="javascript:history.back()"><input type="button" value="Cancel" class="btn btn-default"></a>
-  {{clothesItems.item}}
 </form>
