--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -6,23 +6,38 @@ body {
   background: #f5f5f5;
 }
 
+h2 {
+  text-align: center;
+  font-size: 36px;
+  text-shadow: 0px 0px 1px  #5f6062;
+}
+
+main {
+  overflow-y: scroll;
+  margin-bottom: 80px;
+}
+
+a#mobile-logo {
+  display: none;
+}
+
 header {
   background: #333;
-    a.navbar-brand {
-      background: white;
-      font-size: 36px;
-      color: black;
-      height: 80px;
-      line-height: 80px;
-      padding: 0;
-      img {
-        height: 100%;
-        vertical-align: middle;
-      }
+  a.navbar-brand {
+    background: white;
+    font-size: 36px;
+    color: black;
+    height: 80px;
+    line-height: 80px;
+    padding: 0;
+    img {
+      height: 100%;
+      vertical-align: middle;
     }
+  }
   .navbar-nav li a {
- line-height: 50px;
-}
+    line-height: 50px;
+  }
 }
 
 
@@ -31,7 +46,7 @@ div.home-page {
   background-size: cover;
   max-height: 600px;
   padding-bottom: 300px;
-  padding-top: 35px;
+  padding-top: 30px;
   text-align: center;
   .login-register{
     .formsBox {
@@ -44,6 +59,9 @@ div.home-page {
           form {
             background-color: rgba(245, 245, 245, .9);
             padding: 18px;
+            input {
+              height: 30px;
+            }
             &#formOne{
               border-radius: 15px 15px 0 0;
             }
@@ -60,8 +78,16 @@ div.home-page {
 @media only screen
 and (min-device-width : 375px)
 and (max-device-width : 667px) {
+  a#active-logo{
+    display: none;
+  }
+  a#menu-toggle, #sidebar-nav {
+    display: none;
+  }
+  a#mobile-logo {
+    display: inline;
+  }
   h2 {
-    text-align: center;
     margin: 0;
   }
   div.home-page {
@@ -126,8 +152,107 @@ ul.clothes-index {
       font-weight: bold;
     }
     img {
+      background: #5f6062;
       height: 240px;
       width: auto;
+      border-radius: 10px;
+      &:hover {
+        cursor: pointer;
+        box-shadow: 0px 0px 12px  #5f6062;
+        margin: 0;
+      }
     }
+  }
+}
+
+#sidebar-wrapper {
+  margin-right: -250px;
+  right: 0;
+  width: 250px;
+  border-radius: 20px 0 0 0;
+  background: rgba(255,255,255,0.1);
+  position: fixed;
+  height: 100%;
+  overflow-y: auto;
+  z-index: 1000;
+  transition: all 0.5s ease-in 0s;
+  h4 {
+    padding-top: 10px;
+    text-align: center;
+  }
+  form {
+    text-align: center;
+    input {
+      margin-top: 15px;
+      background: black;
+      color: white;
+      font-weight: bold;
+    }
+    label {
+      margin-top: 10px;
+      vertical-align: bottom;
+    }
+    select {
+      text-align: right;
+      width: 80%;
+      vertical-align: bottom;
+    }
+  }
+  &.active {
+    right: 250px;
+    width: 250px;
+    transition: all 0.5s ease-out 0s;
+  }
+  .sidebar-nav {
+    position: absolute;
+    top: 0;
+    width: 250px;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    & > .sidebar-brand {
+      height: 40px;
+      line-height: 40px;
+      font-size: 18px;
+      }
+  }
+}
+
+#menu-toggle {
+  // top: 0;
+  // margin: 5px 5px 0 0;
+  // right: 0;
+  // position: fixed;
+  // z-index: 1;
+  // float: right;
+  text-decoration: none;
+  color: black;
+  font-size: 20px;
+  border-radius: 15px;
+  background: white;
+  display: block;
+  width: 95%;
+  text-align: center;
+  margin: 0 auto;
+  &.clicked {
+    background: #f7996e;
+    color: white;
+    box-shadow: 0px 0px 4px black;
+  }
+}
+
+footer {
+  background: #f5f5f5;
+  width: 100%;
+  text-align: center;
+  position: fixed;
+  bottom: 0;
+  display: block;
+  h3 {
+    text-align: center;
+    font-size: 18px;
+    color: #5f6062;
+    font-weight: 100;
+    padding: 10px;
   }
 }
