--- a/src/js/views/clothesItems/new.html
+++ b/src/js/views/clothesItems/new.html
@@ -9,7 +9,7 @@
     <textarea ng-model="clothesItems.item.description" class="form-control"></textarea>
   </div>
   <div class="form-group">
-    <label>Category</label>
+    <label>Category</label><br>
     <select name="categories" ng-model="clothesItems.item.category">
       <option value="jeans">Jeans</option>
       <option value="jumpers">Jumpers</option>
@@ -18,7 +18,7 @@
     </select>
   </div>
   <div class="form-group">
-    <label>Gender</label>
+    <label>Gender</label><br>
     <select name="sex" ng-model="clothesItems.item.sex">
       <option value="female">Female</option>
       <option value="male">Male</option>
