--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -7,6 +7,8 @@ body {
 }
 
 h2 {
+  margin-top: 5px;
+  margin-bottom: 15px;
   text-align: center;
   font-size: 36px;
   text-shadow: 0px 0px 1px  #5f6062;
@@ -153,7 +155,7 @@ ul.clothes-index {
     }
     img {
       background: #5f6062;
-      height: 240px;
+      height: 280px;
       width: auto;
       border-radius: 10px;
       &:hover {
@@ -166,25 +168,25 @@ ul.clothes-index {
 }
 
 #sidebar-wrapper {
+  padding-bottom: 30px;
   margin-right: -250px;
   right: 0;
   width: 250px;
   border-radius: 20px 0 0 0;
-  background: rgba(255,255,255,0.1);
+  background: rgba(255,255,255,0.3);
   position: fixed;
   height: 100%;
   overflow-y: auto;
   z-index: 1000;
   transition: all 0.5s ease-in 0s;
-  h4 {
-    padding-top: 10px;
-    text-align: center;
-  }
   form {
     text-align: center;
     input {
       margin-top: 15px;
-      background: black;
+      padding: 5px 0;
+      width: 80%;
+      border-radius: 10px;
+      background: #f7996e;
       color: white;
       font-weight: bold;
     }
@@ -238,6 +240,12 @@ ul.clothes-index {
     background: #f7996e;
     color: white;
     box-shadow: 0px 0px 4px black;
+  }
+}
+
+form.add-item {
+  select {
+    width: 200px;
   }
 }
 
