--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -185,6 +185,7 @@ ul.clothes-index {
   padding-bottom: 30px;
   margin-right: -250px;
   right: 0;
+  top: 730px;
   width: 250px;
   border-radius: 20px 0 0 0;
   background: rgba(255,255,255,0.3);
@@ -216,6 +217,7 @@ ul.clothes-index {
   }
   &.active {
     right: 250px;
+    top: 530px;
     width: 250px;
     transition: all 0.5s ease-out 0s;
   }
