--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -266,16 +266,18 @@ form.add-item {
 }
 
 footer {
-  background: #f5f5f5;
+  border-top: 4px ridge rgba(0,0,0,0.7);
+  background: #9b9b9c;
   width: 100%;
   text-align: center;
   position: fixed;
   bottom: 0;
   display: block;
   h3 {
+    margin: 10px 0;
     text-align: center;
     font-size: 18px;
-    color: #5f6062;
+    color: #f5f5f5;
     font-weight: 100;
     padding: 10px;
   }
