--- a/src/js/views/clothesItems/index.html
+++ b/src/js/views/clothesItems/index.html
@@ -1,5 +1,6 @@
 <h2>ALL ITEMS</h2>
 <a id="menu-toggle" ng-click="main.toggleFilter()" href="#">Filters</a>
+<h4 id="no-items" ng-hide="clothesItems.items">No items found</h4>
 <ul class="clothes-index">
   <li ng-repeat="item in clothesItems.items track by $index" ui-sref="clothesItemsShow({ id: item._id })">
     <img ng-src="{{item.image}}" alt="" />
