--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -149,6 +149,11 @@ and (max-device-width : 667px) {
   }
 }
 
+h4#no-items {
+  margin-left: 30px;
+  margin-top: 20px;
+}
+
 ul.clothes-index {
   list-style-type: none;
   padding: 0;
@@ -203,6 +208,9 @@ ul.clothes-index {
       background: #f7996e;
       color: white;
       font-weight: bold;
+      &:focus {
+        outline: none;
+      }
     }
     label {
       margin-top: 10px;
