start of wardobe view and controller

--- a/src/js/views/clothesItems/index.html
+++ b/src/js/views/clothesItems/index.html
@@ -5,6 +5,8 @@
   <li ng-repeat="item in clothesItems.items track by $index" ui-sref="clothesItemsShow({ id: item._id })">
     <img ng-src="{{item.image}}" alt="" />
     <h4>{{item.title}}</h4>
+    {{item.owner}}
+    {{item.available}}
   </li>
 </ul>
 
