--- a/src/js/views/users/wardrobeShow.html
+++ b/src/js/views/users/wardrobeShow.html
@@ -1,1 +1,33 @@
 <h2>MY WARDROBE</h2>
+<a id="menu-toggle" ng-click="main.toggleFilter()" href="#">Filters</a>
+<h4 id="no-items" ng-hide="wardrobe.items">No items found</h4>
+<ul class="clothes-index">
+  <li ng-repeat="item in wardrobe.items track by $index" ui-sref="wardrobeShow({ id: item._id })">
+    <img ng-src="{{item.image}}" alt="" />
+    <h4>{{item.title}}</h4>
+    {{item.owner}}
+  </li>
+</ul>
+
+<div id="sidebar-wrapper">
+  <ul class="sidebar-nav">
+    <li>
+      <form class="filters" ng-submit="wardrobe.filter()">
+        <label for="category" >Category</label><br>
+        <select id="category" name="categories" ng-model="wardrobe.filters.category">
+          <option value="jeans">Jeans</option>
+          <option value="jumpers">Jumpers</option>
+          <option value="skirts">Skirts</option>
+          <option value="shirts">Shirts</option>
+        </select><br>
+        <label>Gender</label><br>
+        <select name="sex" ng-model="wardrobe.filters.sex">
+          <option value="female">Female</option>
+          <option value="male">Male</option>
+        </select>
+        <input id="filters-submit" type="submit" name="name" value="Update"><br />
+        <input id="filters-clear" type="button" ng-click="wardrobe.clearFilters()" value="Clear"><br />
+      </form>
+    </li>
+  </ul>
+</div>
