--- a/src/js/views/users/wardrobeShow.html
+++ b/src/js/views/users/wardrobeShow.html
@@ -2,7 +2,7 @@
 <a id="menu-toggle" ng-click="main.toggleFilter()" href="#">Filters</a>
 <h4 id="no-items" ng-hide="wardrobe.items">No items found</h4>
 <ul class="clothes-index">
-  <li ng-repeat="item in wardrobe.items track by $index" ui-sref="wardrobeShow({ id: item._id })">
+  <li ng-repeat="item in wardrobe.items track by $index" ui-sref="clothesItemsShow({ id: item._id })">
     <img ng-src="{{item.image}}" alt="" />
     <h4>{{item.title}}</h4>
   </li>
