--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -289,3 +289,38 @@ footer {
     padding: 10px;
   }
 }
+
+div.items-show {
+  img {
+    display: block;
+    height: 350px;
+    text-align: center;
+    margin: 0 auto;
+  }
+  ul {
+    padding: 0;
+    margin: 0;
+    list-style-type: none;
+    li {
+      text-align: center;
+      h1 {
+        margin-top: 1px;
+      }
+    }
+  }
+}
+
+button.swish-button {
+  background: #f7996e;
+  color: white;
+  border-radius: 3px;
+  box-shadow: 0px 0px 1px black;
+  a {
+    color: white;
+    text-decoration: none;
+  }
+}
+
+ul.nav-buttons {
+  text-align: center;
+}
