--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -4,6 +4,7 @@ body {
   font-family: 'Helvetica Neue', sans-serif;
   font-weight: 300;
   background: #f5f5f5;
+  overflow: hidden;
 }
 
 h2 {
@@ -323,4 +324,8 @@ button.swish-button {
 
 ul.nav-buttons {
   text-align: center;
+}
+
+[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
+  display: none !important;
 }
