--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,5 +1,14 @@
 @import "bower";
 
+html {
+    overflow: scroll;
+    overflow-x: hidden;
+}
+::-webkit-scrollbar {
+    width: 0px;  /* remove scrollbar space */
+    background: transparent;  /* optional: just make scrollbar invisible */
+}
+
 body {
   font-family: 'Helvetica Neue', sans-serif;
   font-weight: 300;
@@ -16,6 +25,7 @@ h2 {
 
 main {
   margin-bottom: 80px;
+  overflow-y: scroll;
 }
 
 a#mobile-logo {
@@ -323,4 +333,8 @@ button.swish-button {
 
 ul.nav-buttons {
   text-align: center;
+}
+
+[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
+  display: none !important;
 }
