--- a/src/js/views/clothesItems/show.html
+++ b/src/js/views/clothesItems/show.html
@@ -9,6 +9,6 @@
 </div>
 <ul class="list-inline nav-buttons">
   <li><a class="btn btn-default" ng-show="(main.user.id == clothesItems.item.owner)" ui-sref="clothesItemsEdit({id: clothesItems.item._id})">Edit</a></li>
-  <li><button class="swish-button btn" ng-show="(main.user.id != clothesItems.item.owner)"><a  ui-sref="usersOutgoingShow">SWISH</a></button></li>
+  <li><button class="swish-button btn" ng-show="(main.user.id != clothesItems.item.owner)"><a ui-sref="usersOutgoingShow" ng-click"createSwish()">SWISH</a></button></li>
   <li><a class="btn btn-default" href="javascript:history.back()">Back</a></li>
 </ul>
