--- a/src/js/views/users/outgoingShow.html
+++ b/src/js/views/users/outgoingShow.html
@@ -1,1 +1,6 @@
 <h2>OUTBOX</h2>
+<div class="row">
+  <div class="col-xs-6 col-md-4">They want</div>
+  <div class="col-xs-6 col-md-4">I want</div>
+  <div class="col-xs-6 col-md-4">Status</div>
+</div>
