added incoming swish controller

--- a/src/js/views/users/incomingShow.html
+++ b/src/js/views/users/incomingShow.html
@@ -3,4 +3,6 @@
   <div class="col-xs-6 col-md-4">They want</div>
   <div class="col-xs-6 col-md-4">I want</div>
   <div class="col-xs-6 col-md-4">Status</div>
+  {{ vm.transactions }}
+
 </div>
