--- a/src/js/views/users/incomingShow.html
+++ b/src/js/views/users/incomingShow.html
@@ -1,6 +1,7 @@
 <h2>INBOX</h2>
-<div class="row">
+<div ng-repeat="transaction in incoming.transactions" class="row">
   <div class="col-xs-6 col-md-4">They want</div>
+  {{ transaction.initial_item.IMAGEhERE }}
   <div class="col-xs-6 col-md-4">I want</div>
   <div class="col-xs-6 col-md-4">Status</div>
   {{ vm.transactions }}
