--- a/src/js/views/users/incomingShow.html
+++ b/src/js/views/users/incomingShow.html
@@ -1,9 +1,27 @@
 <h2>INBOX</h2>
-<div ng-repeat="transaction in incoming.transactions" class="row">
-  <div class="col-xs-6 col-md-4">They want</div>
-  {{ transaction.initial_item.IMAGEhERE }}
-  <div class="col-xs-6 col-md-4">I want</div>
-  <div class="col-xs-6 col-md-4">Status</div>
-  {{ vm.transactions }}
+<div class="row">
+  <div class="col-xs-6 col-md-4">
+    <p>
+      They want
+    </p>
+    <li>
+      <img ui-sref="clothesItemsShow({ id : transaction.initial_item.IDHERE})" ng-src="{{ transaction.initial_item.IMAGEhERE }}" alt="" />
+    </li>
+  </div>
+  <div class="col-xs-6 col-md-4">
+    <p>
+      I want
+    </p>
+    <li>
+      <img ui-sref="clothesItemsShow({ id : transaction.response_item.IDHERE})" ng-src="{{ transaction.response_item.IMAGEhERE }}" alt="" />
+    </li>
+  </div>
+  <div class="col-xs-6 col-md-4">
+    <p>
+      Status
+    </p>
+    <button type="button" name="button">Cancel</button>
+
+  </div>
 
 </div>
