--- a/src/js/views/users/outgoingShow.html
+++ b/src/js/views/users/outgoingShow.html
@@ -1,6 +1,30 @@
 <h2>OUTBOX</h2>
 <div class="row">
-  <div class="col-xs-6 col-md-4">They want</div>
-  <div class="col-xs-6 col-md-4">I want</div>
-  <div class="col-xs-6 col-md-4">Status</div>
+  <div class="col-xs-6 col-md-4">
+    <p>
+      They want
+    </p>
+    <li>
+      <img ui-sref="clothesItemsShow({ id : transaction.initial_item.IDHERE})" ng-src="{{ transaction.initial_item.IMAGEhERE }}" alt="" />
+    </li>
+  </div>
+  <div class="col-xs-6 col-md-4">
+    <p>
+      I want
+    </p>
+    <li>
+      <img ui-sref="clothesItemsShow({ id : transaction.response_item.IDHERE})" ng-src="{{ transaction.response_item.IMAGEhERE }}" alt="" />
+    </li>
+    <!-- <h2 ng-hide"transaction.response_item.id">Pending</h2> -->
+  </div>
+  <div class="col-xs-6 col-md-4">
+    <p>
+      Status
+    </p>
+    <button type="button" ng-show="">Accept</button>
+    <button type="button" ng-show="">Reject</button>
+    <button type="button" ng-show="">Cancel</button>
+  </div>
+  {{ vm.transactions }}
+
 </div>
