mobile responsive styles on swish index pages

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -338,3 +338,7 @@ ul.nav-buttons {
 [ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
   display: none !important;
 }
+
+.swish-index-col {
+  width: 33%;
+}
