--- a/src/js/views/users/incomingShow.html
+++ b/src/js/views/users/incomingShow.html
@@ -1,6 +1,6 @@
 <h2>INBOX</h2>
 <div class="row">
-  <div class="col-xs-6 col-md-4">
+  <div class="swish-index-col col-xs-6 col-md-4">
     <p>
       They want
     </p>
@@ -8,7 +8,7 @@
       <img ui-sref="clothesItemsShow({ id : transaction.initial_item.IDHERE})" ng-src="{{ transaction.initial_item.IMAGEhERE }}" alt="" />
     </li>
   </div>
-  <div class="col-xs-6 col-md-4">
+  <div class="swish-index-col col-xs-6 col-md-4">
     <p>
       I want
     </p>
@@ -16,7 +16,7 @@
       <img ui-sref="clothesItemsShow({ id : transaction.response_item.IDHERE})" ng-src="{{ transaction.response_item.IMAGEhERE }}" alt="" />
     </li>
   </div>
-  <div class="col-xs-6 col-md-4">
+  <div class="swish-index-col col-xs-6 col-md-4">
     <p>
       Status
     </p>
