mobile res styles on swish indexes

--- a/src/js/views/users/outgoingShow.html
+++ b/src/js/views/users/outgoingShow.html
@@ -1,6 +1,6 @@
 <h2>OUTBOX</h2>
 <div class="row">
-  <div class="col-xs-6 col-md-4">
+  <div class="swish-index-col col-xs-6 col-md-4">
     <p>
       They want
     </p>
@@ -8,7 +8,7 @@
       <img ui-sref="clothesItemsShow({ id : transaction.initial_item.IDHERE})" ng-src="{{ transaction.initial_item.IMAGEhERE }}" alt="" />
     </li>
   </div>
-  <div class="col-xs-6 col-md-4">
+  <div class="swish-index-col col-xs-6 col-md-4">
     <p>
       I want
     </p>
@@ -17,7 +17,7 @@
     </li>
     <!-- <h2 ng-hide"transaction.response_item.id">Pending</h2> -->
   </div>
-  <div class="col-xs-6 col-md-4">
+  <div class="swish-index-col col-xs-6 col-md-4">
     <p>
       Status
     </p>
