archive functions started

--- a/src/js/views/users/outgoingShow.html
+++ b/src/js/views/users/outgoingShow.html
@@ -21,9 +21,9 @@
     <p>
       Status
     </p>
-    <button type="button" ng-show="">Accept</button>
-    <button type="button" ng-show="">Reject</button>
-    <button type="button" ng-show="">Cancel</button>
+    <button type="button" ng-click="outgoing.approve()">Accept</button>
+    <button type="button">Reject</button>
+    <button type="button">Cancel</button>
   </div>
   {{ vm.transactions }}
 
