--- a/src/js/views/users/incomingShow.html
+++ b/src/js/views/users/incomingShow.html
@@ -6,7 +6,7 @@
     </p>
     <ul>
       <li ng-repeat="transaction in incoming.transactions">
-        <img ui-sref="clothesItemsShow({ id : transaction.initial_item._id})" ng-src="{{ transaction.initial_item.image }}" alt="" />
+        <img ui-sref="clothesItemsShow({ id : transaction.initial_item._id })" ng-src="{{ transaction.initial_item.image }}" />
       </li>
     </ul>
   </div>
@@ -16,16 +16,17 @@
     </p>
     <ul>
       <li ng-repeat="transaction in incoming.transactions">
-        <img ui-sref="clothesItemsShow({ id : transaction.response_item._id})" ng-src="{{ transaction.response_item.image }}" alt="" />
+        <img ui-sref="clothesItemsShow({ id : transaction.response_item._id})" ng-src="{{ transaction.response_item.image }}" />
       </li>
     </ul>
   </div>
   <div class="swish-index-col col-xs-6 col-md-4">
-    <ul>
+    <p>
+      Status
+    </p>
+      <ul>
       <li ng-repeat="transaction in incoming.transactions">
-        <p>
-          Status
-        </p>
+
         <button type="button" name="button">Cancel</button>
       </li>
     </ul>
