--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -15,6 +15,11 @@ body {
   background: #f5f5f5;
 }
 
+img {
+  width: 250px;
+  height: 300px;
+}
+
 h2 {
   margin-top: 5px;
   margin-bottom: 15px;
