--- a/src/js/views/users/outgoingShow.html
+++ b/src/js/views/users/outgoingShow.html
@@ -4,11 +4,11 @@
     <p>
       I want
     </p>
-<ul>
-  <li ng-repeat="transaction in outgoing.transactions">
-    <img ui-sref="clothesItemShow({ id : transaction.initial_item._id })" ng-src="{{ transaction.initial_item.image }}"/>
-  </li>
-</ul>
+    <ul>
+      <li ng-repeat="transaction in outgoing.transactions">
+        <img ui-sref="clothesItemShow({ id : transaction.initial_item._id })" ng-src="{{ transaction.initial_item.image }}"/>
+      </li>
+    </ul>
 
   </div>
   <div class="swish-index-col col-xs-6 col-md-4">
@@ -16,10 +16,10 @@
       They want
     </p>
     <ul>
-    <li ng-repeat="transaction in outgoing.transactions">
-      <img ui-sref="clothesItemsShow({ id : transaction.response_item._id})" ng-src="{{ transaction.response_item.image }}" />
-    </li>
-  </ul>
+      <li ng-repeat="transaction in outgoing.transactions">
+        <img ng-show="transaction.response_item" ui-sref="clothesItemsShow({ id : transaction.response_item._id})" ng-src="{{ transaction.response_item.image }}"/>
+      </li>
+    </ul>
     <h2 ng-hide="transaction.response_item">Pending</h2>
   </div>
   <div class="swish-index-col col-xs-6 col-md-4">
