--- a/src/js/views/users/archiveShow.html
+++ b/src/js/views/users/archiveShow.html
@@ -35,7 +35,7 @@
     </p>
     <ul>
       <li class="high img-fluid" ng-repeat="transaction in archive.transactions">
-        <a class="btn btn-success" href="mailto:{{transaction.emailAddress}}subject=Let's Swish!">Get in touch</a>
+        <a class="btn btn-success" href="mailto:{{transaction.emailAddress}}?subject=Let's swish!"">Get in touch</a>
       </li>
     </ul>
   </div>
