--- a/src/js/views/users/incomingShow.html
+++ b/src/js/views/users/incomingShow.html
@@ -5,9 +5,9 @@
       They want
     </p>
     <ul>
-      <li class="high img-fluid" ng-repeat="transaction in incoming.transactions">
+      <li class="high" ng-repeat="transaction in incoming.transactions">
         <h4>{{transaction.initiator.firstName}} wants:</h4>
-        <img ui-sref="clothesItemsShow({ id : transaction.initial_item._id })" ng-src="{{ transaction.initial_item.image }}" />
+        <img class="img-fluid" ui-sref="clothesItemsShow({ id : transaction.initial_item._id })" ng-src="{{ transaction.initial_item.image }}" />
       </li>
     </ul>
   </div>
@@ -16,9 +16,9 @@
       I want
     </p>
     <ul>
-      <li class="high img-fluid" ng-repeat="transaction in incoming.transactions">
+      <li class="high" ng-repeat="transaction in incoming.transactions">
         <h4 ng-show="transaction.response_item">You want:</h4>
-        <img ng-show="transaction.response_item" ui-sref="clothesItemsShow({ id : transaction.response_item._id})" ng-src="{{ transaction.response_item.image }}" />
+        <img class="img-fluid" ng-show="transaction.response_item" ui-sref="clothesItemsShow({ id : transaction.response_item._id})" ng-src="{{ transaction.response_item.image }}" />
         <button ui-sref="swishbackIndex( { user : transaction.initiator._id, transaction : transaction._id } )" ng-hide="transaction.response_item" id="view-their-closet">View Their Items</button>
       </li>
     </ul>
@@ -28,7 +28,7 @@
       Status
     </p>
       <ul>
-      <li class="high img-fluid" ng-repeat="transaction in incoming.transactions">
+      <li class="high" ng-repeat="transaction in incoming.transactions">
 
         <button type="button" name="button">Cancel</button>
       </li>
