got typo in archive

--- a/src/js/views/users/archiveShow.html
+++ b/src/js/views/users/archiveShow.html
@@ -9,7 +9,7 @@
         <p>
           {{transaction.initiator.firstName}} wants:
         </p>
-        <img ui-sref="clothesItemShow({ id : transaction.initial_item._id })" ng-src="{{ transaction.initial_item.image }}"/>
+        <img ui-sref="clothesItemsShow({ id : transaction.initial_item._id })" ng-src="{{ transaction.initial_item.image }}"/>
       </li>
     </ul>
 
