--- a/src/scss/partials/_media-query.scss
+++ b/src/scss/partials/_media-query.scss
@@ -57,19 +57,15 @@ and (max-device-width : 667px) {
   form.add-item{
     width: 300px;
   }
+  ul{
+    li.ng-scope {
+      height: 100px;
+    }
+  }
   ul.clothes-index {
     li.ng-scope {
       display: block;
       text-align: center;
     }
-  }
-}
-
-
-@media only screen
-and (min-device-width : 375px)
-and (max-device-width : 667px) {
-  .high {
-    height: 100px;
   }
 }
