--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,6 +1,6 @@
 @import "bower";
 @import "partials/typeface";
-@import "partials/in-out-box";
+@import "partials/inbox-outbox";
 
 html {
   overflow: scroll;
