--- a/src/js/views/users/incomingShow.html
+++ b/src/js/views/users/incomingShow.html
@@ -5,14 +5,14 @@
     <li ng-repeat="transaction in incoming.transactions">
       <div class="row">
 
-        <div class="col-md-4 one">
+        <div class="col-md-4 col-xs-4 one">
           <h3>{{transaction.initiator.firstName}} wants:</h3>
           <div class="image-container">
             <img class="img-fluid" ui-sref="clothesItemsShow({ id : transaction.initial_item._id })" ng-src="{{ transaction.initial_item.image }}" />
           </div>
         </div>
 
-        <div class="col-md-4 two">
+        <div class="col-md-4 col-xs-4 two">
           <h3 ng-show="transaction.response_item">You want</h3>
           <div class="image-container">
             <img class="img-fluid" ng-show="transaction.response_item" ui-sref="clothesItemsShow({ id : transaction.response_item._id})" ng-src="{{ transaction.response_item.image }}" />
@@ -20,7 +20,7 @@
           <button ui-sref="swishbackIndex( { user : transaction.initiator._id, transaction : transaction._id } )" ng-hide="transaction.response_item" id="view-their-closet">View Their Items</button>
         </div>
 
-        <div class="col-md-4 three">
+        <div class="col-md-4 col-xs-4 three">
           <button type="button" ng-click="incoming.reject(transaction)">Cancel</button>
         </div>
       </div>
