--- a/src/scss/partials/_inbox-outbox.scss
+++ b/src/scss/partials/_inbox-outbox.scss
@@ -12,13 +12,9 @@
 
       .row {
         .one, .two, .three {
-          height: 450px;
+          height: auto;
 
           .image-container {
-            margin: 40px auto;
-            width: 300px;
-            height: 300px;
-
             overflow: hidden;
 
             img {
@@ -30,7 +26,7 @@
 
         .three {
           button {
-            margin: 55% auto;
+            margin: 50% auto;
           }
         }
       }
