--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,6 +1,7 @@
 @import "bower";
 @import "partials/typeface";
 @import "partials/inbox-outbox";
+@import "partials/clothes-index";
 
 html {
   overflow: scroll;
