--- a/src/scss/partials/_media-query.scss
+++ b/src/scss/partials/_media-query.scss
@@ -59,7 +59,7 @@ and (max-device-width : 667px) {
   }
   ul{
     li.ng-scope {
-      height: 100px;
+      height: auto;
     }
   }
   ul.clothes-index {
