--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -114,7 +114,7 @@ ul.clothes-index {
   list-style-type: none;
   padding: 0;
   margin: 0 auto;
-  text-align: left;
+  text-align: center;
   h2 {
     margin: 0px;
   }
