--- a/src/scss/partials/_inbox-outbox.scss
+++ b/src/scss/partials/_inbox-outbox.scss
@@ -29,6 +29,11 @@
             margin: 50% auto;
           }
         }
+        .two {
+          button {
+            margin: 50% auto;
+          }
+        }
       }
     }
   }
