buttons all responsive

--- a/src/js/views/users/outgoingShow.html
+++ b/src/js/views/users/outgoingShow.html
@@ -1,5 +1,5 @@
 <div class="inbox">
-  <h1>Outbox</h1>
+  <h2>OUTBOX</h2>
   <h4 ng-hide="outgoing.transactions.length">No outgoing swishes to show</h4>
 
   <ul>
