--- a/src/scss/partials/_inbox-outbox.scss
+++ b/src/scss/partials/_inbox-outbox.scss
@@ -28,6 +28,9 @@
           button {
             margin: 50% auto;
           }
+          .btn {
+            margin: 50% auto;
+          }
         }
         .two {
           button {
