changing button ref back to a ref

--- a/src/js/views/users/archiveShow.html
+++ b/src/js/views/users/archiveShow.html
@@ -23,7 +23,7 @@
         <div class="col-md-4 col-xs-4">
           <h3>Set it up!</h3>
           <div class="image-container">
-          <button class="btn btn-success archive-three" href="mailto:{{transaction.emailAddress}}?subject=Let's swish!">Get in touch</button>
+          <a class="btn btn-success archive-three" href="mailto:{{transaction.emailAddress}}?subject=Let's swish!">Get in touch</a>
         </div>
       </div>
       </div>
