--- a/src/js/views/users/archiveShow.html
+++ b/src/js/views/users/archiveShow.html
@@ -22,7 +22,7 @@
 
         <div class="col-md-4 col-xs-4 three">
           <h3>Set it up!</h3>
-          <a class="btn btn-success" href="mailto:{{transaction.emailAddress}}?subject=Let's swish!">Get in touch</a>
+          <button class="btn btn-success" href="mailto:{{transaction.emailAddress}}?subject=Let's swish!">Get in touch</button>
         </div>
       </div>
     </li>
